# macro-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  prisma.config.ts  vercel.json
.claude/: launch.json
ml/: README.md  pyproject.toml
ml/launchd/: com.nickroot.macroml.weekly.plist
ml/src/macroml/: __init__.py  alfred.py  backtest.py  blend.py  config.py  data.py  engine.py  models.py  output.py  pit.py  recession.py  regime.py
prisma/: schema.prisma
prisma/migrations/20260704000000_init/: migration.sql
prisma/migrations/20260704000001_add_allocations/: migration.sql
scripts/: backfill.ts  export-ml-data.ts  import-ml-results.ts  ml-weekly.sh  seed-demo.ts  wipe-data.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ingest/: route.ts
src/components/: blend-panel.tsx  global-panel.tsx  metric-card.tsx  portfolio-panel.tsx  recession-panel.tsx  regime-forecast-panel.tsx  regime-strip.tsx  sparkline.tsx  time-series-chart.tsx  timeline-panel.tsx  track-record-panel.tsx
src/lib/: bis.ts  dashboard.ts  db.ts  format.ts  fred.ts  global.ts  ingest.ts  metrics.ts  multpl.ts  portfolio.ts  stats.ts  stooq.ts  timeline.ts  yahoo.ts
