[project]
name = "macroml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nickroot", email = "nickyroot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
